# ovisbot

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  Dockerfile  Dockerfile-prod  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  core.py  docker-compose-with-reloading.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.reloading.yml  docker-compose.yml  help_info.py  logging.ini  persistence.py  pinctf-only.md  pinctf-pls.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build_push_image.yml  codeql-analysis.yml  deploy.yml  deploy_bot.yml  push_image_deploy.yml  pypi_publish.yml
bot/: core.py  db.py  db_models.py  exceptions.py  help_info.py  helpers.py  requirements.txt
bot/extensions/: ctf.py  ctftime.py  manage.py  stats.py  utils.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  (+4 more)
examples/notion/: README.md  poc.py
extensions/: ctf.py
ovisbot/: __main__.py  bot.py  cli.py  cog_manager.py  config.py  core.py  db_models.py  error_handling.py  events.py  exceptions.py  help_info.py  helpers.py  locale.py  requirements.txt  todo-fixes.md  wip_core.py
ovisbot/commands/: base.py  manage.py  rank.py
ovisbot/core/: models.py
ovisbot/extensions/: core.py  cryptohack.py  ctf.py  ctftime.py  ctftime_writeups.py  hackthebox.py  manage.py  poll.py  stats.py  utils.py
ovisbot/locale/: ovisbot.pot
ovisbot/utils/: logging.py  progressbar.py
tools/: setupenv.py
(+11 files in other folders)
