[metadata]
name = OvisBot
version = attr: ovisbot.__version__
description = A module Discord bot for CTF competition management
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = CYberMouflons
author_email = info@cybermouflons.com
url = https://github.com/cybermouflons/ovisbot
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat
    Topic :: Documentation :: Sphinx

[options]
packages = find_namespace:
python_requires = >=3.7.0

[options.entry_points]
console_scripts =
    ovisbot=ovisbot.__main__:run
    ovisbot-setup=ovisbot.setup:run_cli

[options.packages.find]
include =
    ovisbot
    ovisbot.*

[flake8]
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    venv

ignore = E203, E266, E501, W503, F403, F401
    # Put Error/Style codes here e.g. H301
select = B,C,E,F,W,T4,B9
max-line-length = 89
max-complexity = 18

